SNI-5921 stop creating wa task when uploading additional document